# zellij-linear

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  install.sh
.github/workflows/: ci.yml
crates/linear-client/: Cargo.toml
crates/linear-client/src/: auth.rs  http.rs  lib.rs  queries.rs  types.rs
crates/zellij-linear/: Cargo.toml
crates/zellij-linear-plugin/: Cargo.toml
crates/zellij-linear-plugin/src/: api.rs  bridge.rs  config.rs  main.rs  poll.rs  state.rs  util.rs
crates/zellij-linear-plugin/src/ui/: detail.rs  help.rs  list.rs  mod.rs  text.rs
crates/zellij-linear/src/: config.rs  configure.rs  http_impl.rs  init.rs  login.rs  logout.rs  main.rs  pkce.rs  status.rs  token.rs
examples/: .linear.toml  layout.kdl
