[package]
name = "zellij-linear-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zellij plugin that mirrors a Linear.app project as a live sidebar and bridges issues into a Claude Code pane."

[[bin]]
name = "zellij-linear-plugin"
path = "src/main.rs"

[dependencies]
linear-client = { path = "../linear-client" }
serde.workspace = true
serde_json.workspace = true

zellij-tile = "0.44"
toml = "0.9"
