[package]
name = "zellij-linear"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Companion CLI for the zellij-linear plugin: OAuth login + token helper."

[[bin]]
name = "zellij-linear"
path = "src/main.rs"

[dependencies]
linear-client = { path = "../linear-client" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
url.workspace = true

clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["blocking", "json", "rustls"], default-features = false }
toml = "1"
tiny_http = "0.12"
sha2 = "0.11"
base64 = "0.22"
rand = "0.10"
webbrowser = "1"
